tera/src/snapshot_tests/snapshots/tera__snapshot_tests__parser__parser_errors@loop_invalid_field.txt.snap
---
source: tera/src/snapshot_tests/parser.rs
expression: res.unwrap_err()
input_file: tera/src/snapshot_tests/parser_inputs/errors/loop_invalid_field.txt
---
 Syntax error --> [loop_invalid_field.txt:1:23]
  |
1 | {% for a in v %}{{loop.unknown}}{% endfor %}
  |                        ^---
  = Found invalid field of `loop`: unknown. Only `index`, `index0`, `first`, `last` and `length` exist.
